# parazit

./: .gitignore  CMakeLists.txt  README.md
dllsample/: CMakeLists.txt  dllsample.cpp  dummy.cpp  pipe.cpp  pipe.h  runwithdll.cpp
findfunc_example/: CMakeLists.txt  findfunc.cpp  target.cpp
simple/: simple.cpp
